# ventus-mlir

./: CMakeLists.txt  README.md
cmake/: AddSpikeTest.cmake
test/: CMakeLists.txt  utils.cc
test/include/: utils.h
test/matmul/: Makefile  matmul.mlir  test.cc
test/vecadd/: CMakeLists.txt  test.cc  test.cpp  vecadd.cc  vecadd.mlir
test/vecadd_gpu/: Makefile  test.cc  vecadd.mlir  vecadd_cl.riscv
testcase/: kernel.ll  kernel_custom.mlir  lower.sh  matmul.mlir  vecadd_gpu.mlir
ventus/: CMakeLists.txt
ventus/include/GPUToLLVMVentus/: CMakeLists.txt  GPUToLLVMVentusPass.h  GPUToLLVMVentusPass.td
ventus/include/toy/: CMakeLists.txt  ToyPasses.h  ToyPasses.td
ventus/lib/: CMakeLists.txt
ventus/lib/GPUCommon/: CMakeLists.txt  GPUOpsLowering.cpp  GPUToLLVMConversion.cpp
ventus/lib/GPUToLLVMVentus/: CMakeLists.txt  GPUToLLVMVentus.cpp
ventus/lib/Transforms/: CMakeLists.txt  CMakeLists.txt.bak  ConvertGPUToVentus.cpp.bak  GPUToLLVMSPV.cpp  GPUToLLVMVentus.cpp
ventus/tools/: CMakeLists.txt  ventus-opt.cpp
ventus/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
